--- a/RibsDog/RibsDog/OffGame/OffGameViewController.storyboard
+++ b/RibsDog/RibsDog/OffGame/OffGameViewController.storyboard
@@ -11,12 +11,25 @@
         <!--Off Game View Controller-->
         <scene sceneID="GzV-lN-fg7">
             <objects>
-                <viewController storyboardIdentifier="OffGameViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="vKn-9P-Ny8" customClass="OffGameViewController" customModule="RibsDog" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="OffGameViewController" modalPresentationStyle="fullScreen" useStoryboardIdentifierAsRestorationIdentifier="YES" id="vKn-9P-Ny8" customClass="OffGameViewController" customModule="RibsDog" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="BNZ-bO-rhc">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bNQ-j0-2Tu">
+                                <rect key="frame" x="164" y="318.5" width="47" height="30"/>
+                                <state key="normal" title="START"/>
+                                <connections>
+                                    <action selector="touchedStartButton:" destination="vKn-9P-Ny8" eventType="touchUpInside" id="Ec1-Sd-2xL"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="HgA-Aw-ocO"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="bNQ-j0-2Tu" firstAttribute="centerY" secondItem="BNZ-bO-rhc" secondAttribute="centerY" id="THd-mP-nGM"/>
+                            <constraint firstItem="bNQ-j0-2Tu" firstAttribute="centerX" secondItem="BNZ-bO-rhc" secondAttribute="centerX" id="Uq3-nQ-XjU"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="k0X-am-vwV" userLabel="First Responder" sceneMemberID="firstResponder"/>
